# ComfyUI-RK-Sampler

./: README.md  __init__.py  node_list.json  pyproject.toml  requirements.txt
nodes/: nodes_rk_sampler.py
nodes/methods/: ae_bosh3.py  ae_cash_karp5.py  ae_dopri5.py  ae_dopri8.py  ae_fehlberg2.py  ae_fehlberg5.py  ae_heun_euler2.py  ae_midpoint2.py  ae_ralston2.py  ae_tsit5.py  fe_euler1.py  fe_heun3.py  fe_kutta3.py  fe_kutta4.py  fe_kutta_38th4.py  fe_ralston3.py  fe_ralston4.py  fe_ssprk3.py  fe_wray3.py  runge_kutta.py
nodes/ode_terms/: scipy_ode_term.py  torchode_ode_term.py
nodes/solvers/: auto_diff_adjoint.py
nodes/step_size_controllers/: pid_controller.py  scheduled_controller.py  scipy_step_impl.py
workflows/: workflow_comfyui_rk_sampler.json
